--- a/test/templates/profilo.html
+++ b/test/templates/profilo.html
@@ -59,8 +59,7 @@
                 });
             });
         });
-    </script>
-    <script>
+
         window.onload = (event) => {
         const toastLiveExample = document.getElementById('liveToast');
         const toast = new bootstrap.Toast(toastLiveExample);
@@ -315,7 +314,6 @@
 </div>
 {% endif %}
 
-
 <!-- Profile info Start -->
 <div class="container-fluid py-5">
     <div class="container py-5">
@@ -325,15 +323,13 @@
                 <form method="post">
                     <div class="row">
                         <div class="form-item">
-                            <label class="form-label my-3">Email<sup>*</sup></label>
-                            <input type="email" class="form-control" style="border: 1px solid #ced4da"
-                                   value="{{utente.Email}}" name="email_profilo" required>
-                        </div>
+                        <label class="form-label my-3">Email<sup>*</sup></label>
+                        <input type="email" class="form-control" style="border: 1px solid #ced4da" value="{{utente.Email}}" name="email_profilo" required>
+                    </div>
                         <div class="col-md-12 col-lg-6">
                             <div class="form-item w-100">
                                 <label class="form-label my-3">Nome<sup>*</sup></label>
-                                <input type="text" name="nome_profilo" class="form-control" value="{{utente.Name}}"
-                                       required>
+                                <input type="text" name="nome_profilo" class="form-control" value="{{utente.Name}}" required>
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-6">
@@ -348,8 +344,7 @@
                         <div class="col-md-12 col-lg-6">
                             <div class="form-item w-100">
                                 <label class="form-label my-3">Sesso<sup>*</sup></label>
-                                <select class="form-select" style="border: 1px solid #ced4da" name="genere_profilo"
-                                        required>
+                                <select class="form-select" style="border: 1px solid #ced4da" name="genere_profilo">
                                     <option>{{utente.Gender}}</option>
                                     <option {% if utente.Gender==
                                     'M' %} hidden {% endif %}> M</option>
@@ -361,8 +356,7 @@
                         <div class="col-md-12 col-lg-6">
                             <div class="form-item w-100">
                                 <label class="form-label my-3">Età<sup>*</sup></label>
-                                <select class="form-select" style="border: 1px solid #ced4da" name="eta_profilo"
-                                        required>
+                                <select class="form-select" style="border: 1px solid #ced4da" name="eta_profilo">
                                     <option>{{utente.Age}}</option>
                                     {% for i in range(18,61) %}
                                     <option> {{i}}</option>
@@ -375,8 +369,7 @@
                         <div class="col-md-12 col-lg-6">
                             <div class="form-item w-100">
                                 <label class="form-label my-3">Peso (kg)<sup>*</sup></label>
-                                <input type="number" class="form-control" value="{{utente.Weight}}" name="peso_profilo"
-                                       required>
+                                <input type="number" class="form-control" value="{{utente.Weight}}" name="peso_profilo" required>
                             </div>
                         </div>
                         <div class="col-md-12 col-lg-6">
@@ -389,7 +382,7 @@
                     </div>
                     <div class="form-item">
                         <label class="form-label my-3">Obiettivo<sup>*</sup></label>
-                        <select class="form-select" style="border: 1px solid #ced4da" name="obiettivo_profilo" required>
+                        <select class="form-select" style="border: 1px solid #ced4da" name="obiettivo_profilo">
                             <option>{{utente.Goal}}</option>
                             <option {% if utente.Goal==
                             'Dimagrire' %} hidden {% endif %}> Dimagrire </option>
@@ -401,7 +394,7 @@
                     </div>
                     <div class="form-item">
                         <label class="form-label my-3">Livello di attività<sup>*</sup></label>
-                        <select class="form-select" style="border: 1px solid #ced4da" name="livello_profilo" required>
+                        <select class="form-select" style="border: 1px solid #ced4da" name="livello_profilo">
                             <option>{{utente.activity_level}}</option>
                             <option {% if utente.activity_level==
                             'Sedentario' %} hidden {% endif %}> Sedentario </option>
@@ -431,7 +424,7 @@
                                                                                   name="categoria{{loop.index}}_profilo"
                                                                                   value="{{elem}}" {% if elem in
                                                                                   utente.Favorites %} checked {% endif
-                                                                                  %} required>{{elem}}</label></li>
+                                                                                  %}>{{elem}}</label></li>
                                         {% endfor %}
                                     </ul>
                                 </div>
@@ -490,7 +483,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row g-4 text-center align-items-center justify-content-center pt-4">
+                  <div class="row g-4 text-center align-items-center justify-content-center pt-4">
                     <button type="button" class="btn border-secondary py-3 px-4 text-uppercase w-100 text-primary"
                             data-bs-toggle="modal" data-bs-target="#passwordModal">
                         Cambio password
