--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -169,7 +169,7 @@
 
     <div class="container px-0">
         <nav class="navbar navbar-light bg-verde-scuro navbar-expand-xl">
-            <a href="#" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
+            <a href="/" class="navbar-brand"><h1 class="bianco display-6">SpeSana</h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars text-primary"></span>
@@ -253,7 +253,7 @@
     <h1 class="text-center text-white display-6">Prodotti</h1>
     <ol class="breadcrumb justify-content-center mb-0">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="#">Products</a></li>
+        <li class="breadcrumb-item"><a href="/prodotti">Prodotti</a></li>
         <li class="breadcrumb-item active text-white">{{prodotto.product_name}}</li>
     </ol>
 </div>
