--- a/test/templates/products.html
+++ b/test/templates/products.html
@@ -59,6 +59,13 @@
             });
         });
     </script>
+    <script>
+        window.onload = (event) => {
+        const toastLiveExample = document.getElementById('liveToast');
+        const toast = new bootstrap.Toast(toastLiveExample);
+        toast.show();
+        };
+    </script>
     <style>
         .code-btn{
         font-size: 1.5em
@@ -116,6 +123,7 @@
 
 <body>
 
+
 {% if flagLog == False %}
 <!-- Navbar start senza essere loggati -->
 <div class="container-fluid fixed-top bg-bs-dark bg-verde-scuro">
@@ -135,8 +143,8 @@
             </button>
             <div class="collapse navbar-collapse bg-verde-scuro" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
-                    <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="/product" class="nav-item nav-link active">Prodotti</a>
+                    <a href="/" class="nav-item nav-link active">Home</a>
+                    <a href="/product" class="nav-item nav-link">Prodotti</a>
                     <a href="/nutriscore" class="nav-item nav-link">Nutriscore</a>
                 </div>
                 <div class="d-flex m-3 me-0">
@@ -179,8 +187,8 @@
             </button>
             <div class="collapse navbar-collapse bg-verde-scuro" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
-                    <a href="/" class="nav-item nav-link">Home</a>
-                    <a href="/product" class="nav-item nav-link active">Prodotti</a>
+                    <a href="/" class="nav-item nav-link active">Home</a>
+                    <a href="/product" class="nav-item nav-link">Prodotti</a>
                     <a href="/nutriscore" class="nav-item nav-link">Nutriscore</a>
                 </div>
                 <div class="bianco">Ciao {{ utente.Name }} {{ utente.Surname }}</div>
@@ -195,6 +203,7 @@
                         </a>
                         <div class="dropdown-menu m-0 bg-secondary bianco rounded-0">
                             <a href="/profilo" class="dropdown-item">Il mio profilo</a>
+                            <a href="/profilo/ricette" class="dropdown-item">Le mie ricette</a>
                             <a href="/logout" class="dropdown-item">Logout</a>
                         </div>
                     </div>
@@ -247,6 +256,20 @@
 </div>
 <!-- Single Page Header End -->
 
+{% if fail %}
+<div class="toast-container position-absolute top-1 end-0">
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="liveToast">
+        <div class="toast-header bg-verde-scuro">
+            <strong class="me-auto text-white">NOTIFICA</strong>
+            <small class="text-white">ricerca codice</small>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Cerrar"></button>
+        </div>
+        <div class="toast-body">
+            <h6>Codice non trovato sulla imagine </h6>
+        </div>
+    </div>
+</div>
+{% endif %}
 
 <!-- Fruits Shop Start-->
 <div class="container-fluid fruite py-5">
@@ -376,8 +399,7 @@
 
 
 <!-- Footer Start -->
-
-<div class="container-fluid bg-verde-scuro text-white-50 footer pt-3 mt-5">
+<div class="container-fluid bg-verde-scuro text-white-50 footer mt-1">
     <div class="container">
         <div class="pb-4" style="border-bottom: 1px solid rgba(226, 175, 24, 0.5) ;">
             <div class="row g-4">
@@ -395,11 +417,11 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="d-flex justify-content-end pt-3">
-                        <img src="{{ url_for('static', filename='imgTest/logo-generation.svg') }}">
+                        <img src="/static/imgTest/logo-generation.svg">
                     </div>
                 </div>
             </div>
-            <h5 class="text-light mt-4 mb-3 text-center">Sviluppato da:</h5>
+            <h6 class="text-light mt-4 mb-3 text-center">Sviluppato con python, flask, mongodb e bootstrap da:</h6>
             <p class="mb-2 text-center"><a class="text-light text-decoration-underline"
                                            href="//www.linkedin.com/in/armando-izaguirre-la-rocca/"> Armando
                 Izaguirre </a>-
