--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -44,8 +44,7 @@
 
 
             var prompt = buttonVal;
-            var dateTime = new Date();
-            var time = dateTime.toLocaleTimeString();
+
             $.ajax({
                 url: '/',
                 type: 'POST',
@@ -54,26 +53,11 @@
                 success: function(data) {
                     $('#response').append('<p id="GFG2">Spesana.IA<i class="bi bi-stars"></i>: ' + data.response + '</p>');
                     $('#response #GFG2').css({"color": "green"});
+                    $('#chatModal').modal('show');
                     }
                 });
             });
         });
-
-
-            var favProd = buttonVal;
-            $.ajax({
-                url: '/',
-                type: 'POST',
-                data: {fav: favProd},
-                dataType: 'json',
-                success: function(data) {
-                buttonFav.addClass('btn-secondary selected');
-                buttonFav.removeClass('fav-btn');
-                    }
-                });
-            });
-         });
-
     </script>
     <script>
         $(document).ready(function() {
@@ -87,6 +71,20 @@
             $.ajaxSetup({
                 headers: { 'X-CSRFToken': csrftoken }
             });
+
+        var favProd = buttonVal;
+            $.ajax({
+                url: '/',
+                type: 'POST',
+                data: {fav: favProd},
+                dataType: 'json',
+                success: function(data) {
+                buttonFav.addClass('btn-secondary selected');
+                buttonFav.removeClass('fav-btn');
+                    }
+                });
+            });
+         });
     </script>
     <script>
         $(document).ready(function() {
@@ -441,8 +439,7 @@
 
                                         <form method="post" class="ia_form">
                                             <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
-                                                    type="submit" data-bs-toggle="modal" name="prompt"
-                                                    data-bs-target="#chatModal"
+                                                    type="submit" name="prompt"
                                                     {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}, ricetta"
                                                     {% else %} onclick="Gologin()" {% endif %}><i
                                                     class="fas fa-drumstick-bite"></i><i
@@ -450,8 +447,7 @@
                                         </form>
                                         <form method="post" class="ia_form">
                                             <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
-                                                    type="submit" data-bs-toggle="modal" name="prompt"
-                                                    data-bs-target="#chatModal"
+                                                    type="submit" name="prompt"
                                                     {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}, info" {%
                                                     else %} onclick="Gologin()" {% endif %}><i
                                                     class="bi bi-info-circle"></i><i
@@ -556,8 +552,7 @@
                                             </form>
                                 <form method="post" class="ia_form">
                                     <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-0 my-2"
-                                            type="submit" data-bs-toggle="modal" name="prompt"
-                                            data-bs-target="#chatModal"
+                                            type="submit" name="prompt"
                                             {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}, ricetta"
                                             {% else %} onclick="Gologin()" {% endif %}><i
                                             class="fas fa-drumstick-bite"></i><i
@@ -565,8 +560,7 @@
                                 </form>
                                 <form method="post" class="ia_form">
                                     <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
-                                            type="submit" data-bs-toggle="modal" name="prompt"
-                                            data-bs-target="#chatModal"
+                                            type="submit" name="prompt"
                                             {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}, info" {%
                                             else %} onclick="Gologin()" {% endif %}><i
                                             class="bi bi-info-circle"></i><i
@@ -682,8 +676,7 @@
                                             </form>
                                         <form method="post" class="ia_form">
                                             <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
-                                                    type="submit" data-bs-toggle="modal" name="prompt"
-                                                    data-bs-target="#chatModal"
+                                                    type="submit" name="prompt"
                                                     {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}, ricetta"
                                                     {% else %} onclick="Gologin()" {% endif %}><i
                                                     class="fas fa-drumstick-bite"></i><i
@@ -691,8 +684,7 @@
                                         </form>
                                         <form method="post" class="ia_form">
                                             <button class="ia-btn btn btn-secondary border-secondary rounded-pill px-3 text-light mx-1 my-2"
-                                                    type="submit" data-bs-toggle="modal" name="prompt"
-                                                    data-bs-target="#chatModal"
+                                                    type="submit" name="prompt"
                                                     {% if flagLog %} value="{{ utente.Email }}, {{elem.code}}, info" {%
                                                     else %} onclick="Gologin()" {% endif %}><i
                                                     class="bi bi-info-circle"></i><i
