--- a/test/templates/product-detail.html
+++ b/test/templates/product-detail.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Prodotto</title>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='imgTest/Carrello-icon.png') }}">
+    <title> {{prodotto.product_name}} </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
