--- a/test/templates/home.html
+++ b/test/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="static/imgTest/Carrello-icon.png">
     <title>Home</title>
     <meta content="" name="keywords">
     <meta content="" name="description">
