--- a/test/templates/nutriscore.html
+++ b/test/templates/nutriscore.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" type="image/png" href="static/imgTest/Carrello-icon.png">
     <title>Nutriscore</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
