--- a/test/templates/products.html
+++ b/test/templates/products.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="static/imgTest/Carrello-icon.png">
     <title>Prodotti</title>
     <meta content="" name="keywords">
     <meta content="" name="description">
