--- a/test/templates/search.html
+++ b/test/templates/search.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Shop</title>
+    <link rel="icon" type="image/png" href="static/imgTest/Carrello-icon.png">
+    <title>Ricerca</title>
     <meta content="" name="keywords">
     <meta content="" name="description">
 
